# cmake-study

./: .gitignore  Asyncify.ts  CMakeLists.txt  CMakePresets.json  ExitStatus.ts  README.md  SAFE_HEAP_LOAD.ts  SAFE_HEAP_STORE.ts  abort.ts  assert.ts  ccall.ts  checkInt.ts  deno.jsonc  fd_close.ts  fd_seek.ts  install.sh  lengthBytesUTF8.ts  ptrToString.ts  stringToUTF8.ts  stringToUTF8Array.ts  warnOnce.ts
.devcontainer/: devcontainer.json
.devcontainer/cmake/: install.sh
scripts/: wat.ts
simple/: CMakeLists.txt  README.md  calc.cpp  main.cpp
wasm/: CMakeLists.txt  calc.cpp  calc.hpp  main.test.ts
wasm-async/: CMakeLists.txt  library.js  main.ts  pre.d.ts  pre.js  print.cpp  print.hpp
wasm-callback/: CMakeLists.txt  main.ts  print.cpp  print.hpp
wasm-wget/: CMakeLists.txt  main.ts  print.cpp
